--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,7 +13,7 @@
    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
    <!-- CSS -->
-   <link rel="stylesheet" href="assets/css/styles.css">
+   <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -26,7 +26,7 @@
 //= template/main.html
 //= template/footer.html
 
-   <script src="assets/js/main.js"></script>
+   <script src="js/main.js"></script>
 </body>
 
 </html>
